2023-12-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-directory-files)
	(tramp-skeleton-make-symbolic-link):
	* tramp-cache.el (with-tramp-saved-file-property)
	(with-tramp-saved-file-properties)
	(with-tramp-saved-connection-property)
	(with-tramp-saved-connection-properties): Use `setf' but `setq' in macro.

	* tramp-compat.el (tramp-compat-funcall): Declare debug.

	* tramp-crypt.el (tramp-crypt-file-name-p): Exclude lock files.
	(tramp-crypt-file-name-handler-alist): Use `identity' for
	`abbreviate-file-name'.
	(tramp-crypt-add-directory, tramp-crypt-remove-directory):
	Adapt docstrings.
	(tramp-crypt-cleanup-connection): New defun.  Add it to
	`tramp-cleanup-connection-hook'

	* tramp-sh.el (tramp-sh-extra-args): Extend regexp.

2023-11-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-local-host-regexp): Extend.
	(tramp-signal-process): PROCESS can also be a string.

2023-11-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-file-name-all-completions): Handle ".""
	and "..".

	* tramp-adb.el (tramp-adb-handle-file-name-all-completions):
	* tramp-fuse.el (tramp-fuse-handle-file-name-all-completions):
	* tramp-gvfs.el (tramp-gvfs-handle-file-name-all-completions):
	Remove special handling of "." an "..".

	* tramp-sh.el (tramp-send-command-and-read): Use 'space' instead
	of 'blank' in rx expression, in order to handle also CR and alike.
	Reported by Dominique Quatravaux <dominique@quatravaux.org>.

2023-11-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-file-truename)
	(tramp-skeleton-write-region, tramp-handle-file-truename):
	* tramp-integration.el (tramp-eshell-directory-change)
	(tramp-recentf-exclude-predicate):
	* tramp-smb.el (tramp-smb-handle-copy-file):
	* tramp-sudoedit.el (tramp-sudoedit-do-copy-or-rename-file):
	Use `tramp-tramp-file-p' instead of `file-remote-p'.

2023-11-17  Michael Albinus  <michael.albinus@gmx.de>
